Phillies regular season analysis

--- a/index.html
+++ b/index.html
@@ -105,15 +105,15 @@ ul.task-list{list-style: none;}
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav navbar-nav-scroll ms-auto">
   <li class="nav-item">
-    <a class="nav-link" href="./about.html">About</a>
+    <a class="nav-link" href="./about.html">Blog</a>
   </li>  
   <li class="nav-item compact">
-    <a class="nav-link" href="https://github.com/"><i class="bi bi-github" role="img">
+    <a class="nav-link" href="https://github.com/LucasJWilkinson"><i class="bi bi-github" role="img">
 </i> 
  </a>
   </li>  
   <li class="nav-item compact">
-    <a class="nav-link" href="https://twitter.com"><i class="bi bi-twitter" role="img">
+    <a class="nav-link" href="https://twitter.com/LukeWilk3"><i class="bi bi-twitter" role="img">
 </i> 
  </a>
   </li>  
@@ -144,7 +144,7 @@ ul.task-list{list-style: none;}
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(3)</span></div><div class="category" data-category="analysis">analysis <span class="quarto-category-count">(1)</span></div><div class="category" data-category="code">code <span class="quarto-category-count">(1)</span></div><div class="category" data-category="lowercaseword">lowercaseword <span class="quarto-category-count">(3)</span></div><div class="category" data-category="news">news <span class="quarto-category-count">(2)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(1)</span></div><div class="category" data-category="analysis">analysis <span class="quarto-category-count">(1)</span></div><div class="category" data-category="code">code <span class="quarto-category-count">(1)</span></div><div class="category" data-category="phillies">phillies <span class="quarto-category-count">(1)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -157,53 +157,12 @@ ul.task-list{list-style: none;}
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="news,code,analysis" data-listing-date-sort="1666501200000" data-listing-file-modified-sort="1666571198373" data-listing-reading-time-sort="0.045">
+<div class="quarto-post image-right" data-index="0" data-categories="phillies,code,analysis" data-listing-date-sort="1649653200000" data-listing-file-modified-sort="1667593205084" data-listing-reading-time-sort="3.11">
 <div class="thumbnail">
-<p><a href="./posts/post-with-code/index.html"> <img src="./posts/post-with-code/image.jpg" class="thumnail-image"> </a></p>
+<p><a href="./posts/the-mlb-regular-season-is-pointless/index.html"> <img src="./posts/the-mlb-regular-season-is-pointless/image.png" class="thumnail-image"> </a></p>
 </div>
 <div class="body">
-<a href="./posts/post-with-code/index.html">
-<h3 class="no-anchor listing-title">
-Post With Code
-</h3>
-<div class="listing-subtitle">
-
-</div>
-</a>
-<div class="listing-categories">
-<div class="listing-category" onclick="window.quartoListingCategory('news'); return false;">
-news
-</div>
-<div class="listing-category" onclick="window.quartoListingCategory('code'); return false;">
-code
-</div>
-<div class="listing-category" onclick="window.quartoListingCategory('analysis'); return false;">
-analysis
-</div>
-</div>
-<a href="./posts/post-with-code/index.html">
-<div class="listing-description">
-This is a post with executable code.
-</div>
-</a>
-</div>
-<div class="metadata">
-<a href="./posts/post-with-code/index.html">
-<div class="listing-date">
-Oct 23, 2022
-</div>
-<div class="listing-author">
-Harlow Malloc
-</div>
-</a>
-</div>
-</div>
-<div class="quarto-post image-right" data-index="1" data-categories="lowercaseword,lowercaseword,lowercaseword" data-listing-date-sort="NaN" data-listing-file-modified-sort="1666571327415" data-listing-reading-time-sort="0.005">
-<div class="thumbnail">
-<p><a href="./posts/atlanta-braves-will-always-be-good/index.html"> <img src="./posts/atlanta-braves-will-always-be-good/image.png" class="thumnail-image"> </a></p>
-</div>
-<div class="body">
-<a href="./posts/atlanta-braves-will-always-be-good/index.html">
+<a href="./posts/the-mlb-regular-season-is-pointless/index.html">
 <h3 class="no-anchor listing-title">
 CHANGE THIS TO BE THE TITLE OF YOUR POST
 </h3>
@@ -212,64 +171,29 @@ CHANGE THIS TO BE THE TITLE OF YOUR POST
 </div>
 </a>
 <div class="listing-categories">
-<div class="listing-category" onclick="window.quartoListingCategory('lowercaseword'); return false;">
-lowercaseword
+<div class="listing-category" onclick="window.quartoListingCategory('phillies'); return false;">
+phillies
 </div>
-<div class="listing-category" onclick="window.quartoListingCategory('lowercaseword'); return false;">
-lowercaseword
+<div class="listing-category" onclick="window.quartoListingCategory('code'); return false;">
+code
 </div>
-<div class="listing-category" onclick="window.quartoListingCategory('lowercaseword'); return false;">
-lowercaseword
+<div class="listing-category" onclick="window.quartoListingCategory('analysis'); return false;">
+analysis
 </div>
 </div>
-<a href="./posts/atlanta-braves-will-always-be-good/index.html">
+<a href="./posts/the-mlb-regular-season-is-pointless/index.html">
 <div class="listing-description">
-
+<img src="index_files/figure-html/unnamed-chunk-3-1.png" class="img-fluid" width="672">
 </div>
 </a>
 </div>
 <div class="metadata">
-<a href="./posts/atlanta-braves-will-always-be-good/index.html">
+<a href="./posts/the-mlb-regular-season-is-pointless/index.html">
 <div class="listing-date">
-Invalid Date
+Apr 11, 2022
 </div>
 <div class="listing-author">
-THIS IS YOUR NAME
-</div>
-</a>
-</div>
-</div>
-<div class="quarto-post image-right" data-index="2" data-categories="news" data-listing-date-sort="1666242000000" data-listing-file-modified-sort="1666571198370" data-listing-reading-time-sort="0.16">
-<div class="thumbnail">
-<p><a href="./posts/welcome/index.html"> <img src="./posts/welcome/thumbnail.jpg" class="thumnail-image"> </a></p>
-</div>
-<div class="body">
-<a href="./posts/welcome/index.html">
-<h3 class="no-anchor listing-title">
-Welcome To My Blog
-</h3>
-<div class="listing-subtitle">
-
-</div>
-</a>
-<div class="listing-categories">
-<div class="listing-category" onclick="window.quartoListingCategory('news'); return false;">
-news
-</div>
-</div>
-<a href="./posts/welcome/index.html">
-<div class="listing-description">
-This is the first post in a Quarto blog. Welcome!
-</div>
-</a>
-</div>
-<div class="metadata">
-<a href="./posts/welcome/index.html">
-<div class="listing-date">
-Oct 20, 2022
-</div>
-<div class="listing-author">
-Tristan O’Malley
+Lucas Wilkinson
 </div>
 </a>
 </div>
