--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Blog1</title>
+<title>Lucas Wilkinson’s Blog - Blog1</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -97,7 +97,7 @@ ul.task-list{list-style: none;}
     <nav class="navbar navbar-expand-lg navbar-dark ">
       <div class="navbar-container container-fluid">
       <a class="navbar-brand" href="./index.html">
-    <span class="navbar-title">Blog1</span>
+    <span class="navbar-title">Lucas Wilkinson’s Blog</span>
   </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
   <span class="navbar-toggler-icon"></span>
@@ -157,14 +157,14 @@ ul.task-list{list-style: none;}
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="phillies,code,analysis" data-listing-date-sort="1649653200000" data-listing-file-modified-sort="1667593205084" data-listing-reading-time-sort="3.11">
+<div class="quarto-post image-right" data-index="0" data-categories="phillies,code,analysis" data-listing-date-sort="1649653200000" data-listing-file-modified-sort="1667593492123" data-listing-reading-time-sort="3.01">
 <div class="thumbnail">
 <p><a href="./posts/the-mlb-regular-season-is-pointless/index.html"> <img src="./posts/the-mlb-regular-season-is-pointless/image.png" class="thumnail-image"> </a></p>
 </div>
 <div class="body">
 <a href="./posts/the-mlb-regular-season-is-pointless/index.html">
 <h3 class="no-anchor listing-title">
-CHANGE THIS TO BE THE TITLE OF YOUR POST
+The MLB regular season is quite useless.
 </h3>
 <div class="listing-subtitle">
 
