--- a/First-graph-for-project.html
+++ b/First-graph-for-project.html
@@ -244,12 +244,12 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
 <span id="cb9-33"><a href="#cb9-33" aria-hidden="true" tabindex="-1"></a>  )</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
 <div class="cell-output-display">
 
-<div id="pvbqikfpho" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<div id="ytpnsomsxe" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
 <style>html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#pvbqikfpho .gt_table {
+#ytpnsomsxe .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -274,7 +274,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   border-left-color: #D3D3D3;
 }
 
-#pvbqikfpho .gt_heading {
+#ytpnsomsxe .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -286,7 +286,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   border-right-color: #D3D3D3;
 }
 
-#pvbqikfpho .gt_title {
+#ytpnsomsxe .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -298,7 +298,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   border-bottom-width: 0;
 }
 
-#pvbqikfpho .gt_subtitle {
+#ytpnsomsxe .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -310,13 +310,13 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   border-top-width: 0;
 }
 
-#pvbqikfpho .gt_bottom_border {
+#ytpnsomsxe .gt_bottom_border {
   border-bottom-style: none;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#pvbqikfpho .gt_col_headings {
+#ytpnsomsxe .gt_col_headings {
   border-top-style: none;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -331,7 +331,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   border-right-color: #D3D3D3;
 }
 
-#pvbqikfpho .gt_col_heading {
+#ytpnsomsxe .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -351,7 +351,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   overflow-x: hidden;
 }
 
-#pvbqikfpho .gt_column_spanner_outer {
+#ytpnsomsxe .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -363,15 +363,15 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   padding-right: 4px;
 }
 
-#pvbqikfpho .gt_column_spanner_outer:first-child {
+#ytpnsomsxe .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#pvbqikfpho .gt_column_spanner_outer:last-child {
+#ytpnsomsxe .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#pvbqikfpho .gt_column_spanner {
+#ytpnsomsxe .gt_column_spanner {
   border-bottom-style: none;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -383,7 +383,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   width: 100%;
 }
 
-#pvbqikfpho .gt_group_heading {
+#ytpnsomsxe .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -408,7 +408,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   vertical-align: middle;
 }
 
-#pvbqikfpho .gt_empty_group_heading {
+#ytpnsomsxe .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -423,15 +423,15 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   vertical-align: middle;
 }
 
-#pvbqikfpho .gt_from_md > :first-child {
+#ytpnsomsxe .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#pvbqikfpho .gt_from_md > :last-child {
+#ytpnsomsxe .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#pvbqikfpho .gt_row {
+#ytpnsomsxe .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -450,7 +450,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   overflow-x: hidden;
 }
 
-#pvbqikfpho .gt_stub {
+#ytpnsomsxe .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -463,7 +463,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   padding-right: 5px;
 }
 
-#pvbqikfpho .gt_stub_row_group {
+#ytpnsomsxe .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -477,11 +477,11 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   vertical-align: top;
 }
 
-#pvbqikfpho .gt_row_group_first td {
+#ytpnsomsxe .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#pvbqikfpho .gt_summary_row {
+#ytpnsomsxe .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -491,16 +491,16 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   padding-right: 5px;
 }
 
-#pvbqikfpho .gt_first_summary_row {
+#ytpnsomsxe .gt_first_summary_row {
   border-top-style: none;
   border-top-color: #D3D3D3;
 }
 
-#pvbqikfpho .gt_first_summary_row.thick {
+#ytpnsomsxe .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#pvbqikfpho .gt_last_summary_row {
+#ytpnsomsxe .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -510,7 +510,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   border-bottom-color: #D3D3D3;
 }
 
-#pvbqikfpho .gt_grand_summary_row {
+#ytpnsomsxe .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -520,7 +520,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   padding-right: 5px;
 }
 
-#pvbqikfpho .gt_first_grand_summary_row {
+#ytpnsomsxe .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -530,11 +530,11 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   border-top-color: #D3D3D3;
 }
 
-#pvbqikfpho .gt_striped {
+#ytpnsomsxe .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#pvbqikfpho .gt_table_body {
+#ytpnsomsxe .gt_table_body {
   border-top-style: none;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -543,7 +543,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   border-bottom-color: #D3D3D3;
 }
 
-#pvbqikfpho .gt_footnotes {
+#ytpnsomsxe .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -557,7 +557,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   border-right-color: #D3D3D3;
 }
 
-#pvbqikfpho .gt_footnote {
+#ytpnsomsxe .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-left: 4px;
@@ -566,7 +566,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   padding-right: 5px;
 }
 
-#pvbqikfpho .gt_sourcenotes {
+#ytpnsomsxe .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -580,7 +580,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   border-right-color: #D3D3D3;
 }
 
-#pvbqikfpho .gt_sourcenote {
+#ytpnsomsxe .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -588,64 +588,64 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   padding-right: 5px;
 }
 
-#pvbqikfpho .gt_left {
+#ytpnsomsxe .gt_left {
   text-align: left;
 }
 
-#pvbqikfpho .gt_center {
+#ytpnsomsxe .gt_center {
   text-align: center;
 }
 
-#pvbqikfpho .gt_right {
+#ytpnsomsxe .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#pvbqikfpho .gt_font_normal {
+#ytpnsomsxe .gt_font_normal {
   font-weight: normal;
 }
 
-#pvbqikfpho .gt_font_bold {
+#ytpnsomsxe .gt_font_bold {
   font-weight: bold;
 }
 
-#pvbqikfpho .gt_font_italic {
+#ytpnsomsxe .gt_font_italic {
   font-style: italic;
 }
 
-#pvbqikfpho .gt_super {
+#ytpnsomsxe .gt_super {
   font-size: 65%;
 }
 
-#pvbqikfpho .gt_footnote_marks {
+#ytpnsomsxe .gt_footnote_marks {
   font-style: italic;
   font-weight: normal;
   font-size: 75%;
   vertical-align: 0.4em;
 }
 
-#pvbqikfpho .gt_asterisk {
+#ytpnsomsxe .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#pvbqikfpho .gt_indent_1 {
+#ytpnsomsxe .gt_indent_1 {
   text-indent: 5px;
 }
 
-#pvbqikfpho .gt_indent_2 {
+#ytpnsomsxe .gt_indent_2 {
   text-indent: 10px;
 }
 
-#pvbqikfpho .gt_indent_3 {
+#ytpnsomsxe .gt_indent_3 {
   text-indent: 15px;
 }
 
-#pvbqikfpho .gt_indent_4 {
+#ytpnsomsxe .gt_indent_4 {
   text-indent: 20px;
 }
 
-#pvbqikfpho .gt_indent_5 {
+#ytpnsomsxe .gt_indent_5 {
   text-indent: 25px;
 }
 </style>
