--- a/index.html
+++ b/index.html
@@ -157,14 +157,14 @@ ul.task-list{list-style: none;}
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="phillies,code,analysis" data-listing-date-sort="1649653200000" data-listing-file-modified-sort="1667744936087" data-listing-reading-time-sort="3.01">
+<div class="quarto-post image-right" data-index="0" data-categories="phillies,code,analysis" data-listing-date-sort="1667624400000" data-listing-file-modified-sort="1667745726568" data-listing-reading-time-sort="3.01">
 <div class="thumbnail">
 <p><a href="./posts/the-mlb-regular-season-is-pointless/index.html"> <img src="./posts/the-mlb-regular-season-is-pointless/image.png" class="thumnail-image"> </a></p>
 </div>
 <div class="body">
 <a href="./posts/the-mlb-regular-season-is-pointless/index.html">
 <h3 class="no-anchor listing-title">
-The MLB regular season is quite useless.
+The MLB regular season is quite literally useless.
 </h3>
 <div class="listing-subtitle">
 
@@ -190,7 +190,7 @@ analysis
 <div class="metadata">
 <a href="./posts/the-mlb-regular-season-is-pointless/index.html">
 <div class="listing-date">
-Apr 11, 2022
+Nov 5, 2022
 </div>
 <div class="listing-author">
 Lucas Wilkinson
