--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Lucas Wilkinson’s Blog - Blog1</title>
+<title>Lucas Wilkinson | Blog - Blog1</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -97,7 +97,7 @@ ul.task-list{list-style: none;}
     <nav class="navbar navbar-expand-lg navbar-dark ">
       <div class="navbar-container container-fluid">
       <a class="navbar-brand" href="./index.html">
-    <span class="navbar-title">Lucas Wilkinson’s Blog</span>
+    <span class="navbar-title">Lucas Wilkinson | Blog</span>
   </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
   <span class="navbar-toggler-icon"></span>
@@ -157,7 +157,7 @@ ul.task-list{list-style: none;}
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="phillies,code,analysis" data-listing-date-sort="1667624400000" data-listing-file-modified-sort="1667745726568" data-listing-reading-time-sort="3.01">
+<div class="quarto-post image-right" data-index="0" data-categories="phillies,code,analysis" data-listing-date-sort="1667710800000" data-listing-file-modified-sort="1667759200410" data-listing-reading-time-sort="5.245">
 <div class="thumbnail">
 <p><a href="./posts/the-mlb-regular-season-is-pointless/index.html"> <img src="./posts/the-mlb-regular-season-is-pointless/image.png" class="thumnail-image"> </a></p>
 </div>
@@ -190,7 +190,7 @@ analysis
 <div class="metadata">
 <a href="./posts/the-mlb-regular-season-is-pointless/index.html">
 <div class="listing-date">
-Nov 5, 2022
+Nov 6, 2022
 </div>
 <div class="listing-author">
 Lucas Wilkinson
