--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ ul.task-list{list-style: none;}
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="phillies,code,analysis" data-listing-date-sort="1667710800000" data-listing-file-modified-sort="1667760175875" data-listing-reading-time-sort="5.225">
+<div class="quarto-post image-right" data-index="0" data-categories="phillies,code,analysis" data-listing-date-sort="1667710800000" data-listing-file-modified-sort="1667765384017" data-listing-reading-time-sort="5.325">
 <div class="thumbnail">
 <p><a href="./posts/the-mlb-regular-season-is-pointless/index.html"> <img src="./posts/the-mlb-regular-season-is-pointless/image.png" class="thumnail-image"> </a></p>
 </div>
@@ -183,7 +183,7 @@ analysis
 </div>
 <a href="./posts/the-mlb-regular-season-is-pointless/index.html">
 <div class="listing-description">
-<img src="index_files/figure-html/unnamed-chunk-3-1.png" class="img-fluid" width="672">
+As a petty Mets fan who watched the Philadelphia Phillies win the National League pennant, I am starting to believe that Major League Baseball season’s are not as significant as they used to be.
 </div>
 </a>
 </div>
