--- a/index.html
+++ b/index.html
@@ -157,14 +157,14 @@ ul.task-list{list-style: none;}
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="phillies,code,analysis" data-listing-date-sort="1667710800000" data-listing-file-modified-sort="1667767034449" data-listing-reading-time-sort="5.325">
+<div class="quarto-post image-right" data-index="0" data-categories="phillies,code,analysis" data-listing-date-sort="1667710800000" data-listing-file-modified-sort="1667767239131" data-listing-reading-time-sort="5.325">
 <div class="thumbnail">
 <p><a href="./posts/the-mlb-regular-season-is-pointless/index.html"> <img src="./posts/the-mlb-regular-season-is-pointless/image.png" class="thumnail-image"> </a></p>
 </div>
 <div class="body">
 <a href="./posts/the-mlb-regular-season-is-pointless/index.html">
 <h3 class="no-anchor listing-title">
-The MLB regular season is quite literally useless.
+The MLB regular season is useless.
 </h3>
 <div class="listing-subtitle">
 
