--- a/Massive-Assignment1.html
+++ b/Massive-Assignment1.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Lucas Wilkinson | Blog – first-graph-for-project</title>
+<title>Lucas Wilkinson | Blog – massive-assignment1</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -244,12 +244,12 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
 <span id="cb9-33"><a href="#cb9-33" aria-hidden="true" tabindex="-1"></a>  )</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
 <div class="cell-output-display">
 
-<div id="gerpeptrip" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<div id="gwvxwdddkg" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
 <style>html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#gerpeptrip .gt_table {
+#gwvxwdddkg .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -274,7 +274,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   border-left-color: #D3D3D3;
 }
 
-#gerpeptrip .gt_heading {
+#gwvxwdddkg .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -286,7 +286,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   border-right-color: #D3D3D3;
 }
 
-#gerpeptrip .gt_title {
+#gwvxwdddkg .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -298,7 +298,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   border-bottom-width: 0;
 }
 
-#gerpeptrip .gt_subtitle {
+#gwvxwdddkg .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -310,13 +310,13 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   border-top-width: 0;
 }
 
-#gerpeptrip .gt_bottom_border {
+#gwvxwdddkg .gt_bottom_border {
   border-bottom-style: none;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#gerpeptrip .gt_col_headings {
+#gwvxwdddkg .gt_col_headings {
   border-top-style: none;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -331,7 +331,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   border-right-color: #D3D3D3;
 }
 
-#gerpeptrip .gt_col_heading {
+#gwvxwdddkg .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -351,7 +351,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   overflow-x: hidden;
 }
 
-#gerpeptrip .gt_column_spanner_outer {
+#gwvxwdddkg .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -363,15 +363,15 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   padding-right: 4px;
 }
 
-#gerpeptrip .gt_column_spanner_outer:first-child {
+#gwvxwdddkg .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#gerpeptrip .gt_column_spanner_outer:last-child {
+#gwvxwdddkg .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#gerpeptrip .gt_column_spanner {
+#gwvxwdddkg .gt_column_spanner {
   border-bottom-style: none;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -383,7 +383,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   width: 100%;
 }
 
-#gerpeptrip .gt_group_heading {
+#gwvxwdddkg .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -408,7 +408,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   vertical-align: middle;
 }
 
-#gerpeptrip .gt_empty_group_heading {
+#gwvxwdddkg .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -423,15 +423,15 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   vertical-align: middle;
 }
 
-#gerpeptrip .gt_from_md > :first-child {
+#gwvxwdddkg .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#gerpeptrip .gt_from_md > :last-child {
+#gwvxwdddkg .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#gerpeptrip .gt_row {
+#gwvxwdddkg .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -450,7 +450,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   overflow-x: hidden;
 }
 
-#gerpeptrip .gt_stub {
+#gwvxwdddkg .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -463,7 +463,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   padding-right: 5px;
 }
 
-#gerpeptrip .gt_stub_row_group {
+#gwvxwdddkg .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -477,11 +477,11 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   vertical-align: top;
 }
 
-#gerpeptrip .gt_row_group_first td {
+#gwvxwdddkg .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#gerpeptrip .gt_summary_row {
+#gwvxwdddkg .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -491,16 +491,16 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   padding-right: 5px;
 }
 
-#gerpeptrip .gt_first_summary_row {
+#gwvxwdddkg .gt_first_summary_row {
   border-top-style: none;
   border-top-color: #D3D3D3;
 }
 
-#gerpeptrip .gt_first_summary_row.thick {
+#gwvxwdddkg .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#gerpeptrip .gt_last_summary_row {
+#gwvxwdddkg .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -510,7 +510,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   border-bottom-color: #D3D3D3;
 }
 
-#gerpeptrip .gt_grand_summary_row {
+#gwvxwdddkg .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -520,7 +520,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   padding-right: 5px;
 }
 
-#gerpeptrip .gt_first_grand_summary_row {
+#gwvxwdddkg .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -530,11 +530,11 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   border-top-color: #D3D3D3;
 }
 
-#gerpeptrip .gt_striped {
+#gwvxwdddkg .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#gerpeptrip .gt_table_body {
+#gwvxwdddkg .gt_table_body {
   border-top-style: none;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -543,7 +543,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   border-bottom-color: #D3D3D3;
 }
 
-#gerpeptrip .gt_footnotes {
+#gwvxwdddkg .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -557,7 +557,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   border-right-color: #D3D3D3;
 }
 
-#gerpeptrip .gt_footnote {
+#gwvxwdddkg .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-left: 4px;
@@ -566,7 +566,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   padding-right: 5px;
 }
 
-#gerpeptrip .gt_sourcenotes {
+#gwvxwdddkg .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -580,7 +580,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   border-right-color: #D3D3D3;
 }
 
-#gerpeptrip .gt_sourcenote {
+#gwvxwdddkg .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -588,64 +588,64 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   padding-right: 5px;
 }
 
-#gerpeptrip .gt_left {
+#gwvxwdddkg .gt_left {
   text-align: left;
 }
 
-#gerpeptrip .gt_center {
+#gwvxwdddkg .gt_center {
   text-align: center;
 }
 
-#gerpeptrip .gt_right {
+#gwvxwdddkg .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#gerpeptrip .gt_font_normal {
+#gwvxwdddkg .gt_font_normal {
   font-weight: normal;
 }
 
-#gerpeptrip .gt_font_bold {
+#gwvxwdddkg .gt_font_bold {
   font-weight: bold;
 }
 
-#gerpeptrip .gt_font_italic {
+#gwvxwdddkg .gt_font_italic {
   font-style: italic;
 }
 
-#gerpeptrip .gt_super {
+#gwvxwdddkg .gt_super {
   font-size: 65%;
 }
 
-#gerpeptrip .gt_footnote_marks {
+#gwvxwdddkg .gt_footnote_marks {
   font-style: italic;
   font-weight: normal;
   font-size: 75%;
   vertical-align: 0.4em;
 }
 
-#gerpeptrip .gt_asterisk {
+#gwvxwdddkg .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#gerpeptrip .gt_indent_1 {
+#gwvxwdddkg .gt_indent_1 {
   text-indent: 5px;
 }
 
-#gerpeptrip .gt_indent_2 {
+#gwvxwdddkg .gt_indent_2 {
   text-indent: 10px;
 }
 
-#gerpeptrip .gt_indent_3 {
+#gwvxwdddkg .gt_indent_3 {
   text-indent: 15px;
 }
 
-#gerpeptrip .gt_indent_4 {
+#gwvxwdddkg .gt_indent_4 {
   text-indent: 20px;
 }
 
-#gerpeptrip .gt_indent_5 {
+#gwvxwdddkg .gt_indent_5 {
   text-indent: 25px;
 }
 </style>
@@ -780,7 +780,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
 <span id="cb13-19"><a href="#cb13-19" aria-hidden="true" tabindex="-1"></a>    <span class="at">panel.grid.minor =</span> <span class="fu">element_blank</span>() </span>
 <span id="cb13-20"><a href="#cb13-20" aria-hidden="true" tabindex="-1"></a>  )</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
 <div class="cell-output-display">
-<p><img src="First-graph-for-project_files/figure-html/unnamed-chunk-8-1.png" class="img-fluid" width="672"></p>
+<p><img src="Massive-Assignment1_files/figure-html/unnamed-chunk-8-1.png" class="img-fluid" width="672"></p>
 </div>
 </div>
 <p>I want to use team ERA and batting average to see if it correlates to wins, and I want to know where the Phucking Phillies are at on this list.</p>
@@ -841,7 +841,7 @@ dbl (35): #P, PAge, RA/G, W, L, W-L%, ERA, G, GS, GF, CG, tSho, cSho, SV, IP...
 <span id="cb20-22"><a href="#cb20-22" aria-hidden="true" tabindex="-1"></a>    <span class="at">plot.subtitle =</span> <span class="fu">element_text</span>(<span class="at">size=</span><span class="dv">10</span>,) </span>
 <span id="cb20-23"><a href="#cb20-23" aria-hidden="true" tabindex="-1"></a>  )</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
 <div class="cell-output-display">
-<p><img src="First-graph-for-project_files/figure-html/unnamed-chunk-11-1.png" class="img-fluid" width="672"></p>
+<p><img src="Massive-Assignment1_files/figure-html/unnamed-chunk-11-1.png" class="img-fluid" width="672"></p>
 </div>
 </div>
 
