--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ ul.task-list{list-style: none;}
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(1)</span></div><div class="category" data-category="analysis">analysis <span class="quarto-category-count">(1)</span></div><div class="category" data-category="code">code <span class="quarto-category-count">(1)</span></div><div class="category" data-category="phillies">phillies <span class="quarto-category-count">(1)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(2)</span></div><div class="category" data-category="analysis">analysis <span class="quarto-category-count">(2)</span></div><div class="category" data-category="code">code <span class="quarto-category-count">(2)</span></div><div class="category" data-category="mets">mets <span class="quarto-category-count">(1)</span></div><div class="category" data-category="phillies">phillies <span class="quarto-category-count">(1)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -157,7 +157,48 @@ ul.task-list{list-style: none;}
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="phillies,code,analysis" data-listing-date-sort="1667710800000" data-listing-file-modified-sort="1667785723804" data-listing-reading-time-sort="5.335">
+<div class="quarto-post image-right" data-index="0" data-categories="mets,code,analysis" data-listing-date-sort="1670133600000" data-listing-file-modified-sort="1670181084696" data-listing-reading-time-sort="5.785">
+<div class="thumbnail">
+<p><a href="./posts/best-player-on-mets/index.html"> <img src="./posts/best-player-on-mets/image.png" class="thumnail-image"> </a></p>
+</div>
+<div class="body">
+<a href="./posts/best-player-on-mets/index.html">
+<h3 class="no-anchor listing-title">
+Who was the best player on the 1986 Mets?
+</h3>
+<div class="listing-subtitle">
+
+</div>
+</a>
+<div class="listing-categories">
+<div class="listing-category" onclick="window.quartoListingCategory('mets'); return false;">
+mets
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('code'); return false;">
+code
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('analysis'); return false;">
+analysis
+</div>
+</div>
+<a href="./posts/best-player-on-mets/index.html">
+<div class="listing-description">
+1986 was a long time ago, however this is the last time that the New York Mets won a World Series. This roster contained many star names such as Keith Hernandez, Daryl Strawberry, Dwight Gooden and Gary Carter. The 1986 Mets were notorious for doing drugs before and after the games. This is a time before the league had an effective way to crack down on the drug usage, and this resulted in a team full of studs taking amphetamines before every game.
+</div>
+</a>
+</div>
+<div class="metadata">
+<a href="./posts/best-player-on-mets/index.html">
+<div class="listing-date">
+Dec 4, 2022
+</div>
+<div class="listing-author">
+Lucas Wilkinson
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="1" data-categories="phillies,code,analysis" data-listing-date-sort="1667710800000" data-listing-file-modified-sort="1667785723804" data-listing-reading-time-sort="5.335">
 <div class="thumbnail">
 <p><a href="./posts/the-mlb-regular-season-is-pointless/index.html"> <img src="./posts/the-mlb-regular-season-is-pointless/image.png" class="thumnail-image"> </a></p>
 </div>
