--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@ ul.task-list{list-style: none;}
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="mets,code,analysis" data-listing-date-sort="1670133600000" data-listing-file-modified-sort="1670181742168" data-listing-reading-time-sort="5.775">
+<div class="quarto-post image-right" data-index="0" data-categories="mets,code,analysis" data-listing-date-sort="1670133600000" data-listing-file-modified-sort="1670182713855" data-listing-reading-time-sort="5.775">
 <div class="thumbnail">
-<p><a href="./posts/best-player-on-mets/index.html"> <img src="./posts/best-player-on-mets/image.png" class="thumnail-image"> </a></p>
+<p><a href="./posts/best-player-on-mets/index.html"> <img src="./posts/best-player-on-mets/image.pnc.png" class="thumnail-image"> </a></p>
 </div>
 <div class="body">
 <a href="./posts/best-player-on-mets/index.html">
@@ -183,7 +183,7 @@ analysis
 </div>
 <a href="./posts/best-player-on-mets/index.html">
 <div class="listing-description">
-1986 was a long time ago, however this is the last time that the New York Mets won a World Series. This roster contained many star names such as Keith Hernandez, Daryl Strawberry, Dwight Gooden and Gary Carter. The 1986 Mets were notorious for doing drugs before and after the games. This is a time before the league had an effective way to crack down on the drug usage, and this resulted in a team full of studs taking amphetamines before every game.
+1986 was a long time ago, however this is the last time that the New York Mets won a World Series. This roster contained many star names such as Keith Hernandez, Darryl Strawberry, Dwight Gooden and Gary Carter. The 1986 Mets were notorious for doing drugs before and after the games. This is a time before the league had an effective way to crack down on the drug usage, and this resulted in a team full of studs taking amphetamines before every game.
 </div>
 </a>
 </div>
