--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ ul.task-list li input[type="checkbox"] {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(3)</span></div><div class="category" data-category="analysis">analysis <span class="quarto-category-count">(3)</span></div><div class="category" data-category="code">code <span class="quarto-category-count">(3)</span></div><div class="category" data-category="mets">mets <span class="quarto-category-count">(1)</span></div><div class="category" data-category="models">models <span class="quarto-category-count">(1)</span></div><div class="category" data-category="phillies">phillies <span class="quarto-category-count">(1)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(4)</span></div><div class="category" data-category="analysis">analysis <span class="quarto-category-count">(4)</span></div><div class="category" data-category="code">code <span class="quarto-category-count">(4)</span></div><div class="category" data-category="football">football <span class="quarto-category-count">(1)</span></div><div class="category" data-category="mets">mets <span class="quarto-category-count">(1)</span></div><div class="category" data-category="models">models <span class="quarto-category-count">(1)</span></div><div class="category" data-category="phillies">phillies <span class="quarto-category-count">(1)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -282,6 +282,47 @@ As a petty Mets…
 <a href="./posts/the-mlb-regular-season-is-pointless/index.html">
 <div class="listing-date">
 Nov 6, 2022
+</div>
+<div class="listing-author">
+Lucas Wilkinson
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="3" data-categories="football,code,analysis" data-listing-date-sort="1652158800000" data-listing-file-modified-sort="1683778261261" data-listing-reading-time-sort="5.105">
+<div class="thumbnail">
+<p><a href="./posts/fantasy-football-best-rookie-wr's/index.html"> <img src="./posts/fantasy-football-best-rookie-wr's/image.pnc.png" class="thumnail-image"> </a></p>
+</div>
+<div class="body">
+<a href="./posts/fantasy-football-best-rookie-wr's/index.html">
+<h3 class="no-anchor listing-title">
+Top five 2023 rookie WR’s for fantasy
+</h3>
+<div class="listing-subtitle">
+
+</div>
+</a>
+<div class="listing-categories">
+<div class="listing-category" onclick="window.quartoListingCategory('football'); return false;">
+football
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('code'); return false;">
+code
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('analysis'); return false;">
+analysis
+</div>
+</div>
+<a href="./posts/fantasy-football-best-rookie-wr's/index.html">
+<div class="listing-description">
+Best Rookie WR’s for the 2023 Fantasy Season
+</div>
+</a>
+</div>
+<div class="metadata">
+<a href="./posts/fantasy-football-best-rookie-wr's/index.html">
+<div class="listing-date">
+May 10, 2022
 </div>
 <div class="listing-author">
 Lucas Wilkinson
