--- a/index.html
+++ b/index.html
@@ -166,7 +166,48 @@ ul.task-list li input[type="checkbox"] {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="models,code,analysis" data-listing-date-sort="1682398800000" data-listing-file-modified-sort="1682428364535" data-listing-reading-time-sort="20.76">
+<div class="quarto-post image-right" data-index="0" data-categories="football,code,analysis" data-listing-date-sort="1683694800000" data-listing-file-modified-sort="1683778774485" data-listing-reading-time-sort="5.085">
+<div class="thumbnail">
+<p><a href="./posts/fantasy-football-best-rookie-wr's/index.html"> <img src="./posts/fantasy-football-best-rookie-wr's/Screenshots.png" class="thumnail-image"> </a></p>
+</div>
+<div class="body">
+<a href="./posts/fantasy-football-best-rookie-wr's/index.html">
+<h3 class="no-anchor listing-title">
+Top five 2023 rookie WR’s for fantasy
+</h3>
+<div class="listing-subtitle">
+
+</div>
+</a>
+<div class="listing-categories">
+<div class="listing-category" onclick="window.quartoListingCategory('football'); return false;">
+football
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('code'); return false;">
+code
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('analysis'); return false;">
+analysis
+</div>
+</div>
+<a href="./posts/fantasy-football-best-rookie-wr's/index.html">
+<div class="listing-description">
+Best Rookie WR’s for the 2023 Fantasy Season
+</div>
+</a>
+</div>
+<div class="metadata">
+<a href="./posts/fantasy-football-best-rookie-wr's/index.html">
+<div class="listing-date">
+May 10, 2023
+</div>
+<div class="listing-author">
+Lucas Wilkinson
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="1" data-categories="models,code,analysis" data-listing-date-sort="1682398800000" data-listing-file-modified-sort="1682428364535" data-listing-reading-time-sort="20.76">
 <div class="thumbnail">
 <p><a href="./posts/predicting-ncaa-tournament/index.html"> <img src="./posts/predicting-ncaa-tournament/final4.png" class="thumnail-image"> </a></p>
 </div>
@@ -207,7 +248,7 @@ Lucas Wilkinson
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="1" data-categories="mets,code,analysis" data-listing-date-sort="1670133600000" data-listing-file-modified-sort="1670210487945" data-listing-reading-time-sort="5.48">
+<div class="quarto-post image-right" data-index="2" data-categories="mets,code,analysis" data-listing-date-sort="1670133600000" data-listing-file-modified-sort="1670210487945" data-listing-reading-time-sort="5.48">
 <div class="thumbnail">
 <p><a href="./posts/best-player-on-mets/index.html"> <img src="./posts/best-player-on-mets/image.pnc.png" class="thumnail-image"> </a></p>
 </div>
@@ -248,7 +289,7 @@ Lucas Wilkinson
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="2" data-categories="phillies,code,analysis" data-listing-date-sort="1667710800000" data-listing-file-modified-sort="1667785723804" data-listing-reading-time-sort="5.335">
+<div class="quarto-post image-right" data-index="3" data-categories="phillies,code,analysis" data-listing-date-sort="1667710800000" data-listing-file-modified-sort="1667785723804" data-listing-reading-time-sort="5.335">
 <div class="thumbnail">
 <p><a href="./posts/the-mlb-regular-season-is-pointless/index.html"> <img src="./posts/the-mlb-regular-season-is-pointless/image.png" class="thumnail-image"> </a></p>
 </div>
@@ -282,47 +323,6 @@ As a petty Mets…
 <a href="./posts/the-mlb-regular-season-is-pointless/index.html">
 <div class="listing-date">
 Nov 6, 2022
-</div>
-<div class="listing-author">
-Lucas Wilkinson
-</div>
-</a>
-</div>
-</div>
-<div class="quarto-post image-right" data-index="3" data-categories="football,code,analysis" data-listing-date-sort="1652158800000" data-listing-file-modified-sort="1683778261261" data-listing-reading-time-sort="5.105">
-<div class="thumbnail">
-<p><a href="./posts/fantasy-football-best-rookie-wr's/index.html"> <img src="./posts/fantasy-football-best-rookie-wr's/image.pnc.png" class="thumnail-image"> </a></p>
-</div>
-<div class="body">
-<a href="./posts/fantasy-football-best-rookie-wr's/index.html">
-<h3 class="no-anchor listing-title">
-Top five 2023 rookie WR’s for fantasy
-</h3>
-<div class="listing-subtitle">
-
-</div>
-</a>
-<div class="listing-categories">
-<div class="listing-category" onclick="window.quartoListingCategory('football'); return false;">
-football
-</div>
-<div class="listing-category" onclick="window.quartoListingCategory('code'); return false;">
-code
-</div>
-<div class="listing-category" onclick="window.quartoListingCategory('analysis'); return false;">
-analysis
-</div>
-</div>
-<a href="./posts/fantasy-football-best-rookie-wr's/index.html">
-<div class="listing-description">
-Best Rookie WR’s for the 2023 Fantasy Season
-</div>
-</a>
-</div>
-<div class="metadata">
-<a href="./posts/fantasy-football-best-rookie-wr's/index.html">
-<div class="listing-date">
-May 10, 2022
 </div>
 <div class="listing-author">
 Lucas Wilkinson
