done with this class.

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ ul.task-list li input[type="checkbox"] {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="football,code,analysis" data-listing-date-sort="1683694800000" data-listing-file-modified-sort="1683778774485" data-listing-reading-time-sort="5.085">
+<div class="quarto-post image-right" data-index="0" data-categories="football,code,analysis" data-listing-date-sort="1683694800000" data-listing-file-modified-sort="1683784960213" data-listing-reading-time-sort="5.65">
 <div class="thumbnail">
 <p><a href="./posts/fantasy-football-best-rookie-wr's/index.html"> <img src="./posts/fantasy-football-best-rookie-wr's/Screenshots.png" class="thumnail-image"> </a></p>
 </div>
@@ -192,7 +192,7 @@ analysis
 </div>
 <a href="./posts/fantasy-football-best-rookie-wr's/index.html">
 <div class="listing-description">
-Best Rookie WR’s for the 2023 Fantasy Season
+The draft took place a few weeks ago, which means it is time we start preparing our outrageous takes for the ’23 NFL season.
 </div>
 </a>
 </div>
